--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="Views.MainWindow"
+        x:Name="WelcomeScreen"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -176,23 +177,10 @@
         </Grid>
 
         <!-- Bottom Bar -->
-        <Border Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="4" Background="#d1d8e0" BorderBrush="Black">
+        <Border Grid.ColumnSpan="3" Grid.Column="2" Grid.Row="4" Background="#d1d8e0" BorderBrush="Black">
 
-            <!--<StackPanel Orientation="Horizontal">-->
-            <!--<TextBox x:Name="logwindow" Text="{Binding LogTextUpdate, Mode=TwoWay }">
-                    
-                    -->
-            <!--<RichTextBox.Resources>
-
-                    </RichTextBox.Resources>
-                    <FlowDocument>
-                        <Paragraph FontSize="36">Hello, world!</Paragraph>
-                        <Paragraph FontStyle="Italic" TextAlignment="Left" FontSize="14" Foreground="Gray">Thanks to the RichTextBox control, this FlowDocument is completely editable!</Paragraph>
-                    </FlowDocument>-->
-            <!--
-                </TextBox>-->
-
-            <Button Grid.Row="3" Grid.Column="2"
+            <StackPanel Orientation="Horizontal">
+                <Button Grid.Row="3" Grid.Column="2"
                 Content="Next"
                 HorizontalAlignment="Right" 
                 VerticalAlignment="Center"
@@ -203,8 +191,10 @@
                 Foreground="#FFFFFF"
                 Background="#2e86de"
                 Command="{Binding ButtonNextView}">
-            </Button>
-            <!--</StackPanel>-->
+                </Button>
+
+                <RichTextBox x:Name="logwindow" Width="782" />
+            </StackPanel>
         </Border>
 
         <!-- Content -->
