--- a/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
@@ -113,25 +113,25 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="85"/>
             <RowDefinition Height="65"/>
             <RowDefinition Height="0"/>
             <RowDefinition Height="150*" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200*"/>
-            <ColumnDefinition Width="200"/>
-            <ColumnDefinition Width="400"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Name="textBlock1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="25,0,0,0" Grid.Row="1" Grid.Column="0" FontSize="16px">
+        <TextBlock Name="textBlock1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,0,0,0" Grid.Row="0" Grid.Column="0" FontSize="16px">
           <Bold>Destination Server :</Bold>
         </TextBlock>
-        <TextBlock Name="textBlock2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="186,0,0,0" Grid.Row="1" Grid.Column="0" FontSize="16px" Text="{Binding DestinationServer, Mode=TwoWay}">
+        <TextBlock Name="textBlock2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="186,0,0,0" Grid.Row="0" Grid.Column="0" FontSize="16px" Text="{Binding DestinationServer, Mode=TwoWay}">
         </TextBlock>
 
-        <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left">
+        <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
             <RadioButton x:Name="cb1"  Margin="5,0,0,0" HorizontalAlignment="Left" 
             Content="Create Only" IsChecked="True" FontSize="14px"/>
             <RadioButton x:Name="cb2" Margin="5,0,0,0" HorizontalAlignment="Left" 
@@ -140,11 +140,10 @@
             Content="Create or Update" IsChecked="False" FontSize="14px" />
         </StackPanel>
 
-        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="2"
+        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="0"
                 Content="Update Tags"
-                HorizontalAlignment="left" 
-                VerticalAlignment="Bottom"
-                Margin="40,0,0,0"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
@@ -153,11 +152,10 @@
                 Command="{Binding ButtonUpdateTags}">
         </Button>
 
-        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="3"
+        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="1"
                 Content="Push"
-                HorizontalAlignment="center" 
-                VerticalAlignment="Bottom"
-                Margin="0,0,0,0"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
@@ -168,9 +166,8 @@
 
         <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="3"
                 Content="Refresh"
-                HorizontalAlignment="Right" 
-                VerticalAlignment="Bottom"
-                Margin="0,0,40,0"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
