--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -121,9 +121,9 @@
         <!-- Menu Left Panel -->
         <Grid Background="#dfe6e9"  Grid.Row="1" Grid.RowSpan="3" Margin="0,20,0,-50">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="90" />
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
@@ -135,7 +135,7 @@
                    Foreground="white"
                    Background="#2e86de"
                    FontSize="12px"
-                   Margin="0,0,0,0"
+                   Margin="0,-20,0,0"
                    Height="25"
                    Command="{Binding ConnectionMenuButton}"/>
             <!--<ListBox Grid.Row="0"
