--- a/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
@@ -112,12 +112,11 @@
     </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="120"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="250"/>
             <RowDefinition Height="0"/>
-            <RowDefinition Height="120*" />
+            <RowDefinition Height="100*" />
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
@@ -130,58 +129,92 @@
         <TextBlock Name="textBlock2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="186,0,0,0" Grid.Row="0" Grid.Column="0" FontSize="16px" Text="{Binding DestinationServer, Mode=TwoWay}">
         </TextBlock>
 
-        <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
-            <RadioButton x:Name="cb1"  Margin="5,0,0,0" HorizontalAlignment="Left" 
-            Content="Create Only" IsChecked="True" FontSize="14px"/>
-            <RadioButton x:Name="cb2" Margin="5,0,0,0" HorizontalAlignment="Left" 
-            Content="Update Only" IsChecked="False" FontSize="14px" />
-            <RadioButton x:Name="cb3" Margin="5,0,0,0" HorizontalAlignment="Left" 
-            Content="Create or Update" IsChecked="False" FontSize="14px" />
-        </StackPanel>
-
         <Border Grid.Row="1" Grid.Column="0" Background="GhostWhite" BorderBrush="Gainsboro" Margin="20,0" BorderThickness="1">
-            <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="0"
-                Content="Update Tags"
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Bottom"
-                Height="25"
-                Width="90"
-                Margin="0,20"
-                FontFamily="Arial"
-                Foreground="#FFFFFF"
-                Background="#2f3640"
-                Command="{Binding ButtonUpdateTags}">
-            </Button>
+            <StackPanel Margin="0,5,0,0">
+                <TextBlock  HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="16px">
+                    <Bold>Step 1</Bold>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
+                    <LineBreak/>
+                    Update the attributes configuration of the tags
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
+                    to fit with the target server.
+                </TextBlock>
+                <Button Style="{DynamicResource RoundedButtonStyle}" 
+                    Margin="0,110,0,0"
+                    Content="Update"
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Bottom"
+                    Height="25"
+                    Width="90"
+                    FontFamily="Arial"
+                    Foreground="#FFFFFF"
+                    Background="#2e86de"
+                    Command="{Binding ButtonUpdateTags}">
+                </Button>
+            </StackPanel>
         </Border>
-
         <Border Grid.Row="1" Grid.Column="1" Background="GhostWhite" BorderBrush="Gainsboro" Margin="20,0" BorderThickness="1">
-            <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="1"
+            <StackPanel Margin="0,5,0,0">
+                <TextBlock  HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="16px">
+                    <Bold>Step 2</Bold>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
+                    <LineBreak/>
+                    Select a mode to create the tags
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
+                    and push the configuration to the PI Server
+                    <LineBreak/>
+                </TextBlock>
+                <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
+                    <RadioButton x:Name="cb1"  Margin="5,0,0,0" HorizontalAlignment="Left" 
+                        Content="Create Only" IsChecked="True" FontSize="14px"/>
+                    <RadioButton x:Name="cb2" Margin="5,0,0,0" HorizontalAlignment="Left" 
+                        Content="Update Only" IsChecked="False" FontSize="14px" />
+                    <RadioButton x:Name="cb3" Margin="5,0,0,0" HorizontalAlignment="Left" 
+                        Content="Create or Update" IsChecked="False" FontSize="14px" />
+                </StackPanel>
+                <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="1"
                 Content="Push"
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Bottom"
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
-                Margin="0,20"
+                Margin="0,40,0,0"
                 Foreground="#FFFFFF"
-                Background="#2f3640"
+                Background="#2e86de"
                 Command="{Binding ButtonPushTags}">
-            </Button>
+                </Button>
+            </StackPanel>
         </Border>
-
         <Border Grid.Row="1" Grid.Column="2" Background="GhostWhite" BorderBrush="Gainsboro" Margin="20,0" BorderThickness="1">
-            <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="2"
+            <StackPanel Margin="0,5,0,0">
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="16px">
+                    <Bold>Step 3</Bold>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
+                    <LineBreak/>
+                    Check that the replicated tags
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
+                    are now well updated in data.
+                </TextBlock>
+                <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="2"
                 Content="Refresh"
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Bottom"
-                Margin="0,20"
+                Margin="0,110,0,0"
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
                 Foreground="#FFFFFF"
-                Background="#2f3640"
+                Background="#2e86de"
                 Command="{Binding ButtonRefresh}">
-            </Button>
+                </Button>
+            </StackPanel>
         </Border>
 
         <Grid Margin="10,20,20,20" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6">
