--- a/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
@@ -112,8 +112,8 @@
     </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="250"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="230"/>
             <RowDefinition Height="0"/>
             <RowDefinition Height="100*" />
         </Grid.RowDefinitions>
@@ -165,7 +165,7 @@
                     Select a mode to create the tags
                 </TextBlock>
                 <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="14px">
-                    and push the configuration to the PI Server
+                    and push the configuration to the PI Server.
                     <LineBreak/>
                 </TextBlock>
                 <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
@@ -183,7 +183,7 @@
                 Height="25"
                 Width="90"
                 FontFamily="Arial"
-                Margin="0,40,0,0"
+                Margin="0,37,0,0"
                 Foreground="#FFFFFF"
                 Background="#2e86de"
                 Command="{Binding ButtonPushTags}">
