--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -112,7 +112,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="15"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="50*"/>
             <RowDefinition Height="0"/>
             <RowDefinition Height="150*" />
@@ -155,9 +155,24 @@
                 Background="#2e86de"
                 Command="{Binding ButtonLoadTags}">
         </Button>
-
+        
+        <Grid Grid.Row="0" Grid.ColumnSpan="2">
+            <ProgressBar Name="ProgressBar"
+                         Grid.ColumnSpan="2"
+                         Height="20"
+                         Width="400" 
+                         Foreground="#2e86de"
+                         Background="#FFFFFF"
+                         Orientation="Horizontal" 
+                         Minimum="0" 
+                         Maximum="100" 
+                         Visibility="Visible" 
+                         Value="{Binding CurrentProgress, Mode=OneWay}" />
+            <TextBlock Text="{Binding ElementName=ProgressBar, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        </Grid>
+        
         <Grid Margin="10,20,20,20" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6">
-            <DataGrid AutoGenerateColumns="False" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" VerticalAlignment="Stretch" IsReadOnly="True" ItemsSource="{Binding Attributes}">
+            <DataGrid AutoGenerateColumns="False" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" IsReadOnly="True" ItemsSource="{Binding Attributes}" Grid.ColumnSpan="2">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Name}" />
                     <DataGridTextColumn Header="InstrumentTag" Binding="{Binding InstrumentTag}" />
