--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -114,7 +114,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="50*"/>
-            <RowDefinition Height="0"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="150*" />
         </Grid.RowDefinitions>
 
@@ -153,20 +153,21 @@
                 FontFamily="Arial"
                 Foreground="#FFFFFF"
                 Background="#2e86de"
+                IsEnabled="{Binding IsLoadTagButtonAvailable}"
                 Command="{Binding ButtonLoadTags}">
         </Button>
         
-        <Grid Grid.Row="0" Grid.ColumnSpan="2">
+        <Grid Grid.Row="2" Grid.ColumnSpan="4">
             <ProgressBar Name="ProgressBar"
-                         Grid.ColumnSpan="2"
+                         Grid.ColumnSpan="4"
                          Height="20"
-                         Width="400" 
+                         Margin="60,0"
                          Foreground="#2e86de"
                          Background="#FFFFFF"
                          Orientation="Horizontal" 
                          Minimum="0" 
                          Maximum="100" 
-                         Visibility="Visible" 
+                         Visibility="{Binding TaskBarVisibility}" 
                          Value="{Binding CurrentProgress, Mode=OneWay}" />
             <TextBlock Text="{Binding ElementName=ProgressBar, Path=Value, StringFormat={}{0:0}%}" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
