--- a/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
@@ -151,6 +151,7 @@
                     FontFamily="Arial"
                     Foreground="#FFFFFF"
                     Background="#2e86de"
+                    IsEnabled="{Binding IsUpdateButtonEnabled}"
                     Command="{Binding ButtonUpdateTags}">
                 </Button>
             </StackPanel>
